--- a/FileManager/FileManager.csproj
+++ b/FileManager/FileManager.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Helper.cs" />
     <Compile Include="MessageBox.cs" />
     <Compile Include="NoResultException.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Searcher.cs" />
